Fixed !! (#1444)
* removed bad where phrases

* fix uncaught exception on empty response (#1245)

loading data from a remote API uses HttpClient.load, which might throw
an IOException "no content available for url " + source_url

2019-03-17 11:01:54.353 WARN root  - SusiInference.applyProcedures
java.io.IOException: no content available for url https://api.wolframalpha.com/v2/query?input=describe+4+time+9&output=JSON&appid=9WA6XR-26EWTGEVTE
	at ai.susi.tools.HttpClient.load(HttpClient.java:536)
	at ai.susi.server.api.susi.ConsoleService.loadData(ConsoleService.java:106)
	at ai.susi.mind.SusiInference.applyProcedures(SusiInference.java:296)
	at ai.susi.mind.SusiIntent.consideration(SusiIntent.java:788)
	at ai.susi.mind.SusiMind.react(SusiMind.java:460)
	at ai.susi.mind.SusiMind.reactMinds(SusiMind.java:514)
	at ai.susi.mind.SusiCognition.<init>(SusiCognition.java:119)
	at ai.susi.server.api.susi.SusiService.serviceImpl(SusiService.java:263)
	at ai.susi.server.api.susi.SusiService.serviceImpl(SusiService.java:75)
	at ai.susi.server.AbstractAPIHandler.process(AbstractAPIHandler.java:138)
	at ai.susi.server.AbstractAPIHandler.doGet(AbstractAPIHandler.java:78)

This exception is nowhere caught.
One possible place would be ConsoleService.loadData, but since the
return value of this function is expected to already contain a certain
json format response, returning an empty response or "{}" here does not
work.
The next level SusiInference.applyProcedure. Add a try/catch there
and log that no answer was received.

* new Dockerfile and README on building/running (#1243)

* new Dockerfile and README on building/running

* add URLs

* add skill_repo.enable configuration variable disabling git access (#1244)

* fix draft dir creation (#1246)

* add systemd service file and install into release tarball (#1251)

* add a systemd service file and put it into release tarball

* add another unit file for systemd user

* fixed concurrency pro